Added template update
